<resources>
  <string name="app_name">Architecture</string>
  <string name="e_mail">e-mail</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign In</string>
  <string name="public_repos">Public Repos</string>
  <string name="my_repos">My Repos</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="email_is_invalid">E-mail is invalid</string>
  <string name="email_and_password_are_mismatched">E-mail and password are mismatched</string>
  <string name="successfully">Successfully</string>
</resources>
